Added: Utilities and Testcases to verify Alerts functionality

--- a/project/configurations/urlConfig.json
+++ b/project/configurations/urlConfig.json
@@ -1,6 +1,7 @@
 {
   "urls": {
     "login": "login",
-    "secure_area": "secure"
+    "secure_area": "secure",
+    "alerts_page": "javascript_alerts"
   }
 }
