Added: Api Utilities, Testcases to verify functionality of image links

--- a/project/configurations/urlConfig.json
+++ b/project/configurations/urlConfig.json
@@ -1,7 +1,9 @@
 {
   "urls": {
+    "base_url": "http://the-internet.herokuapp.com/",
     "login": "login",
     "secure_area": "secure",
-    "alerts_page": "javascript_alerts"
+    "alerts_page": "javascript_alerts",
+    "broken_images" : "broken_images"
   }
 }
