--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "wdio": "wdio run ./wdio.conf.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "chai": "^4.3.7",
     "winston": "^3.8.2"
   }
