Added: SliderElement, Testcase to Verify slider drag and drop functionality

--- a/project/configurations/urlConfig.json
+++ b/project/configurations/urlConfig.json
@@ -4,6 +4,7 @@
     "login": "login",
     "secure_area": "secure",
     "alerts_page": "javascript_alerts",
-    "broken_images" : "broken_images"
+    "broken_images": "broken_images",
+    "slider": "horizontal_slider"
   }
 }
