Added: SelectElement, Testcases to verify select option alignment and option selection

--- a/project/configurations/urlConfig.json
+++ b/project/configurations/urlConfig.json
@@ -1,10 +1,13 @@
 {
   "urls": {
     "base_url": "http://the-internet.herokuapp.com/",
-    "login": "login",
-    "secure_area": "secure",
-    "alerts_page": "javascript_alerts",
-    "broken_images": "broken_images",
-    "slider": "horizontal_slider"
+    "pages": {
+      "login": "login",
+      "secure_area": "secure",
+      "alerts": "javascript_alerts",
+      "broken_images": "broken_images",
+      "slider": "horizontal_slider",
+      "dropdown": "dropdown"
+    }
   }
 }
