Added: Test for Addition/Removal of Elements

--- a/project/configurations/urlConfig.json
+++ b/project/configurations/urlConfig.json
@@ -8,7 +8,8 @@
       "broken_images": "broken_images",
       "slider": "horizontal_slider",
       "dropdown": "dropdown",
-      "checkboxes": "checkboxes"
+      "checkboxes": "checkboxes",
+      "add_remove_elements": "add_remove_elements/"
     }
   }
 }
